# cmake-import-test

./: .gitignore  CMakeLists.txt
include/: ArrowWrapper.hpp
libs/: arrow.cmake
src/: ArrowWrapper.cpp  api.h
